# cinemafest_rating_system

./: .gitignore  README.md  config.py  core.py  interface.py  main.py  pyproject.toml  отчет_с_графиками.md
