[project]
name = "cinemafest-rating-system"
version = "0.1.0"
description = ""
authors = [
    {name = "bobr-ik",email = "aavramenko804@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gspread (>=6.2.1,<7.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
